--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <div class="info" id="transactions">
+    @*<div class="info" id="transactions">
         <div class="info_logo"></div>
         <div>
             <h1 id="fromGB">0<grey> OBJETS ACHETÉS</grey></h1>
@@ -131,7 +131,7 @@
         <div>
             <a><h3 class="grey">MES</h3> <h2>TRANSACTIONS</h2></a>
         </div>
-    </div>
+    </div>*@
 
     <div class="info" id="matches">
         <div class="info_logo"></div>
