--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
         <a id="parier" href="@Url.Action("Index", "Bet")">
             <div style="background-image: url(@Url.Content("~/Images/bet.png"))"></div>
         </a>
+        <a id="horaire" href="@Url.Action("Schedule", "Stats")">
+            <div style="background-image: url(@Url.Content("~/Images/calendar.png"))"></div>
+        </a>
         <a id="équipes" href="@Url.Action("Teams", "Stats")">
             <div style="background-image: url(@Url.Content("~/Images/teams.png"))"></div>
         </a>
