--- a/Gobot/Gobot/Content/Bet.scss
+++ b/Gobot/Gobot/Content/Bet.scss
@@ -25,8 +25,10 @@ $height: 100px;
 }
 
 .vs {
-    position: absolute;
-    > h1 { font-size: 50px; font-style: normal; }
+    position: absolute !important;
+    width: 50px;
+    left: calc(50% + 80px - 25px) !important;
+    > h1 { font-size: 40px; font-style: normal; color: $grey; display: none; }
 }
 .team {
     > .text {
@@ -61,6 +63,8 @@ $height: 100px;
 }
 
 .team2 {
+    float: right !important;
+
     h1, h4 { left: -10px; text-align: right; }
     > .img {
         position: relative;
@@ -74,6 +78,8 @@ $height: 100px;
 }
 
 .manageBet {
+    z-index: 995;
+    float: right !important;
     height: $height;
 
     > div {
@@ -331,4 +337,23 @@ $betH: 300px;
                 background-color: $infoBgColor; 
             } 
         }
+    }
+    .info.smaller {
+        width: 50% !important;
+        background-color: transparent !important;
+        margin: 0 !important;
+
+        > a { 
+            background-color: transparent !important;
+            > h2 { padding: 0; text-transform: uppercase; color: #686868 !important; margin: 15px !important; }
+        }
+            > a:hover > h2 { color: white !important; }
+
+        > a.active {
+            background-color: $menuColor !important;
+            cursor: default !important;
+            > h2 { color: white !important; }
+        }
+
+        > .separator { background-color: transparent !important; > div { background-color: $darkGrey !important; } }
     }
