--- a/Gobot/Gobot/Views/Stats/History.cshtml
+++ b/Gobot/Gobot/Views/Stats/History.cshtml
@@ -4,6 +4,20 @@
     ViewBag.Title = "History";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Styles.Render("~/Content/Bet.min.css")
+
+<div class="info smaller" id="getCredits">
+    <a href="@Url.Action("History", "Stats")" class="active"><h2>Parties passées</h2></a>
+    <div class="separator"><div></div></div>
+    <a href="@Url.Action("Schedule", "Stats")"><h2>Parties futures</h2></a>
+</div>
+@*<div id="topNav">
+    <div class="tabs">
+        <div class="tab tab_active"><a href="@Url.Action("History", "Stats")">Parties passées</a></div>
+        <div class="tab"><a href="@Url.Action("Schedule", "Stats")">Parties futures</a></div>
+    </div>
+    <div class="topLine"></div>
+</div>*@
 
 <div class="info_container">
     @{
@@ -33,16 +47,25 @@
                         <div class="img" style="background-image: url(/Images/@(Model[i].Teams[0].ImagePath));"></div>
                         <div class="text">
                             @{
-                                if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 1)
+                                if (Model[i].TeamVictoire == 1)
                                 {
                                     <h1><green>@(Model[i].Teams[0].Name.ToUpper())</green></h1>
-                                    <h4 class="grey">Mise Totale<green> @(Model[i].Team1TotalBet)</green>GC</h4>
-                                    <h4 class="grey">Votre mise<green> @(Model[i].CurrentUserAmount)</green>GC</h4>
+                                    <h4 class="grey">Mise Totale @(Model[i].Team1TotalBet)GC</h4>
+
+                                    if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 1)
+                                    {
+                                        <h4 class="grey">Gains<green> @(Model[i].CurrentUserAmount)</green>GC</h4>
+                                    }
                                 }
                                 else
                                 {
                                     <h1>@(Model[i].Teams[0].Name.ToUpper())</h1>
                                     <h4 class="grey">Mise Totale<offw> @(Model[i].Team1TotalBet)</offw>GC</h4>
+
+                                    if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 1)
+                                    {
+                                        <h4 class="grey">Pertes<red> @(Model[i].CurrentUserAmount)</red>GC</h4>
+                                    }
                                 }
                             }
                         </div>
@@ -52,23 +75,32 @@
                         <div class="img" style="background-image: url(/Images/@(Model[i].Teams[1].ImagePath));"></div>
                         <div class="text">
                             @{
-                                if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 2)
+                                if (Model[i].TeamVictoire == 2)
                                 {
                                     <h1><green>@(Model[i].Teams[1].Name.ToUpper())</green></h1>
-                                    <h4 class="grey">Mise Totale<green> @(Model[i].Team2TotalBet)</green>GC</h4>
-                                    <h4 class="grey">Votre mise<green> @(Model[i].CurrentUserAmount)</green>GC</h4>
+                                    <h4 class="grey">Mise Totale @(Model[i].Team1TotalBet)GC</h4>
+
+                                    if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 2)
+                                    {
+                                        <h4 class="grey">Gains<green> @(Model[i].CurrentUserAmount)</green>GC</h4>
+                                    }
                                 }
                                 else
                                 {
                                     <h1>@(Model[i].Teams[1].Name.ToUpper())</h1>
-                                    <h4 class="grey">Mise Totale<offw> @(Model[i].Team2TotalBet)</offw>GC</h4>
+                                    <h4 class="grey">Mise Totale<offw> @(Model[i].Team1TotalBet)</offw>GC</h4>
+
+                                    if (Model[i].CurrentUserBet && Model[i].TeamNumberBet == 2)
+                                    {
+                                        <h4 class="grey">Pertes<red> @(Model[i].CurrentUserAmount)</red>GC</h4>
+                                    }
                                 }
                             }
                         </div>
                     </div>
                 </div>
-            }
-        }
+                                    }
+                                }
     }
 </div>
 
@@ -84,6 +116,7 @@
 
         function onResize() {
             h_align_window($(".info_container"));
+            h_align_window($("#getCredits"));
 
             $(".info > div").each(function () {
                 if ($(this).children().children().length > 0 && $(this).children().height() == $(this).height())
