--- a/Gobot/Gobot/Views/Watch/Index.cshtml
+++ b/Gobot/Gobot/Views/Watch/Index.cshtml
@@ -15,53 +15,61 @@
     <div id="video">
         <iframe src="https://player.twitch.tv/?channel=gobotts" frameborder="0" scrolling="no" height="378" width="620"></iframe>
     </div>
-    <div class="side ct">
-        <img src="~/Images/ct_side.png" />
-        <h1>CLOUD6@{/*((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["TeamName"].ToObject<string>()*/}</h1>
-        <h2>
-            <green>@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Wins"].ToObject<string>()*/}</green><img src="~/Images/games_won.png" />
-            <white>@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Games"].ToObject<string>()*/}</white> <img src="~/Images/games_played.png" />
-        </h2>
+    @{
+        if (Model != null)
+        {
+            <div class="side ct">
+                <img src="~/Images/ct_side.png" />
+                <h1>@Model.Teams[0].Name</h1>
+                <h2>
+                    <green>@Model.Teams[0].Wins</green><img src="~/Images/games_won.png" />
+                    <white>@Model.Teams[0].Games</white> <img src="~/Images/games_played.png" />
+                </h2>
 
-        <div class="team">
-            <div class="names">
-                <span>Albert@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Bot1"]["BotName"].ToObject<string>()*/}</span>
-                <span>Cecil@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Bot2"]["BotName"].ToObject<string>()*/}</span>
-                <span>Elliot@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Bot3"]["BotName"].ToObject<string>()*/}</span>
-                <span>Marvin@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Bot4"]["BotName"].ToObject<string>()*/}</span>
-                <span>Fergus@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[0]["Bot5"]["BotName"].ToObject<string>()*/}</span>
+                <div class="team">
+                    <div class="names">
+                        <span>@Model.Teams[0].TeamComp[0].Name</span>
+                        <span>@Model.Teams[0].TeamComp[1].Name</span>
+                        <span>@Model.Teams[0].TeamComp[2].Name</span>
+                        <span>@Model.Teams[0].TeamComp[3].Name</span>
+                        <span>@Model.Teams[0].TeamComp[4].Name</span>
+                    </div>
+                    <div class="roles">
+                        <span>@Model.Teams[0].TeamComp[0].Gun</span>
+                        <span>@Model.Teams[0].TeamComp[1].Gun</span>
+                        <span>@Model.Teams[0].TeamComp[2].Gun</span>
+                        <span>@Model.Teams[0].TeamComp[3].Gun</span>
+                        <span>@Model.Teams[0].TeamComp[4].Gun</span>
+                    </div>
+                </div>
             </div>
-            <div class="roles">
-                <span>Rifle@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[1]["Bot1"]["BotName"].ToObject<string>()*/}</span>
-                <span>Sniper@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[1]["Bot2"]["BotName"].ToObject<string>()*/}</span>
-                <span>Rifle@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[1]["Bot3"]["BotName"].ToObject<string>()*/}</span>
-                <span>Shotgun@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[1]["Bot4"]["BotName"].ToObject<string>()*/}</span>
-                <span>rifle@{/*@((Newtonsoft.Json.Linq.JObject)ViewBag.LiveStats)[1]["Bot5"]["BotName"].ToObject<string>()*/}</span>
-            </div>
-        </div>
-    </div>
-    <div class="side t">
-        <img src="~/Images/t_side.png" />
-        <h1>CLOUD6</h1>
-        <h2><b class="green">49</b> <img src="~/Images/games_won.png" /> <b class="white">90</b> <img src="~/Images/games_played.png" /></h2>
+            <div class="side t">
+                <img src="~/Images/t_side.png" />
+                <h1>@Model.Teams[1].Name</h1>
+                <h2>
+                    <green>@Model.Teams[1].Wins</green><img src="~/Images/games_won.png" />
+                    <white>@Model.Teams[1].Games</white> <img src="~/Images/games_played.png" />
+                </h2>
 
-        <div class="team">
-            <div class="names">
-                <span>Albert</span>
-                <span>Cecil</span>
-                <span>Elliot</span>
-                <span>Marvin</span>
-                <span>Fergus</span>
+                <div class="team">
+                    <div class="names">
+                        <span>@Model.Teams[1].TeamComp[0].Name</span>
+                        <span>@Model.Teams[1].TeamComp[1].Name</span>
+                        <span>@Model.Teams[1].TeamComp[2].Name</span>
+                        <span>@Model.Teams[1].TeamComp[3].Name</span>
+                        <span>@Model.Teams[1].TeamComp[4].Name</span>
+                    </div>
+                    <div class="roles">
+                        <span>@Model.Teams[1].TeamComp[0].Gun</span>
+                        <span>@Model.Teams[1].TeamComp[1].Gun</span>
+                        <span>@Model.Teams[1].TeamComp[2].Gun</span>
+                        <span>@Model.Teams[1].TeamComp[3].Gun</span>
+                        <span>@Model.Teams[1].TeamComp[4].Gun</span>
+                    </div>
+                </div>
             </div>
-            <div class="roles">
-                <span>Rifle</span>
-                <span>Sniper</span>
-                <span>Rifle</span>
-                <span>Shotgun</span>
-                <span>rifle</span>
-            </div>
-        </div>
-    </div>
+        }
+    }
 </div>
 
 @section Scripts {
