--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -108,9 +108,9 @@
         <div>
             <h1 id="wonLoss"><green>850</green>/<red>400</red> GAGNÉS/PERDUS</h1>
         </div>
-        <div>
+        @*<div>
             <h1>0<grey> ACHETÉS</grey></h1>
-        </div>
+        </div>*@
         <div>
             <a href="#" class="darkBG">
                 <h2>ACHETER DES CRÉDITS</h2>
