--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -438,7 +438,10 @@ body {
     color: #4c4c4c; }
     .side > h2 > img {
       position: relative;
-      height: 24px; }
+      margin-left: 5px;
+      margin-right: 10px;
+      height: 24px;
+      top: 2px; }
 
 .team {
   position: relative;
