--- a/Gobot/Gobot/Content/Home.scss
+++ b/Gobot/Gobot/Content/Home.scss
@@ -258,7 +258,7 @@ body { overflow: hidden; }
             margin: 0 auto;
             color: #4c4c4c;
 
-            > img { position: relative; height: 24px; }
+            > img { position: relative; margin-left: 5px; margin-right: 10px; height: 24px; top: 2px; }
         }
 }
 
