--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -360,3 +360,13 @@ img {
   #navSmall #third {
     display: none; }
 
+iframe#matchResult {
+  display: block;
+  position: absolute;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+  height: 50%;
+  z-index: 999; }
+
