--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -361,12 +361,7 @@ img {
     display: none; }
 
 iframe#matchResult {
-  display: block;
-  position: absolute;
-  border: 0;
-  margin: 0;
-  padding: 0;
-  width: 50%;
-  height: 50%;
-  z-index: 999; }
+  display: none !important;
+  visibility: hidden !important;
+  opacity: 0 !important; }
 
